--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pandas>=1.5.0
-yfinance>=0.2.35
+yfinance>=0.2.54
 scikit-learn>=1.0.2
 requests>=2.28.0
 beautifulsoup4>=4.11.0
@@ -13,3 +13,4 @@ torch>=2.0.0
 transformers>=4.30.0
 python-dotenv==1.0.1
 newsapi-python==0.2.6
+tqdm>=4.65.0
