--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 pandas>=1.5.0
-yfinance>=0.2.54
+yfinance>=0.2.18
 scikit-learn>=1.0.2
+ta-lib>=0.4.24
 requests>=2.28.0
 beautifulsoup4>=4.11.0
 numpy>=1.23.0
@@ -9,8 +10,6 @@ xgboost>=1.7.0
 pandas-ta>=0.3.14b0
 alpha_vantage>=2.3.1
 textblob>=0.17.1
+finbert-embedding>=0.2.7
 torch>=2.0.0
 transformers>=4.30.0
-python-dotenv==1.0.1
-newsapi-python==0.2.6
-tqdm>=4.65.0
