--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,12 @@ xgboost>=1.7.0
 pandas-ta>=0.3.14b0
 alpha_vantage>=2.3.1
 textblob>=0.17.1
-finbert-embedding>=0.2.7
 torch>=2.0.0
 transformers>=4.30.0
+# Caching dependencies
+requests-cache>=1.0.0
+requests-ratelimiter>=0.4.0
+pyrate-limiter>=2.10.0
+# Add dotenv for environment variables
+python-dotenv>=0.19.0
+tqdm>=4.62.0
