--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,40 @@
+# Core data processing
 pandas>=1.5.0
+numpy>=1.23.0
 yfinance>=0.2.18
+
+# Machine learning
 scikit-learn>=1.0.2
-ta-lib>=0.4.24
+xgboost>=1.7.0
+
+# Web and data fetching
 requests>=2.28.0
 beautifulsoup4>=4.11.0
-numpy>=1.23.0
-statsmodels>=0.13.5
-xgboost>=1.7.0
+python-dotenv>=0.19.0
+
+# Technical analysis
 pandas-ta>=0.3.14b0
-alpha_vantage>=2.3.1
-textblob>=0.17.1
-torch>=2.0.0
-transformers>=4.30.0
-# Caching dependencies
+statsmodels>=0.13.5
+
+# Progress tracking and utilities
+tqdm>=4.62.0
+
+# Web API rate limiting
 requests-cache>=1.0.0
 requests-ratelimiter>=0.4.0
 pyrate-limiter>=2.10.0
-# Add dotenv for environment variables
-python-dotenv>=0.19.0
-tqdm>=4.62.0
+
+# NLP for sentiment analysis
+textblob>=0.17.1
+
+# Visualization
+matplotlib>=3.5.0
+seaborn>=0.11.0
+
+# Web application
+flask>=2.0.0
+flask-cors>=3.0.10
+
+# Additional dependencies
+shap>=0.41.0
+scikit-optimize>=0.9.0
