--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ yfinance>=0.2.18
 # Machine learning
 scikit-learn>=1.0.2
 xgboost>=1.7.0
+scikit-optimize>=0.9.0
+joblib>=1.1.0
 
 # Web and data fetching
 requests>=2.28.0
@@ -34,7 +36,3 @@ seaborn>=0.11.0
 # Web application
 flask>=2.0.0
 flask-cors>=3.0.10
-
-# Additional dependencies
-shap>=0.41.0
-scikit-optimize>=0.9.0
