--- a/requirements.txt
+++ b/requirements.txt
@@ -8,33 +8,17 @@ scikit-learn>=1.0.2
 xgboost>=1.7.0
 
 # Web and data fetching
-requests>=2.28.0
-beautifulsoup4>=4.11.0
 python-dotenv>=0.19.0
-
-# Technical analysis
-pandas-ta>=0.3.14b0
-statsmodels>=0.13.5
 
 # Progress tracking and utilities
 tqdm>=4.62.0
 
-# Web API rate limiting
-requests-cache>=1.0.0
-requests-ratelimiter>=0.4.0
-pyrate-limiter>=2.10.0
+# Database
+sqlite3>=3.0.0
 
-# NLP for sentiment analysis
-textblob>=0.17.1
-
-# Visualization
-matplotlib>=3.5.0
-seaborn>=0.11.0
-
-# Web application
-flask>=2.0.0
-flask-cors>=3.0.10
+# Optimization
+scikit-optimize>=0.9.0
 
 # Additional dependencies
-shap>=0.41.0
-scikit-optimize>=0.9.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
